@@ -298,22 +298,21 @@ list infinitely."
   ;; ERROR-STATES.
   (let* ((reporter (make-pulsing-progress-reporter message))
 	 (result
-	 ;;(working-status-forms (concat message " (%s)") "done"
-	   (catch 'state-wait
-	     (while t
-	       ;; Retrieve current state.
-	       (destructuring-bind (symbol . state)
-		   (rudel-current-state machine t)
-		 ;; Check against success and error states.
-		 (when (memq symbol success-states)
-		   (throw 'state-wait (cons 'success (cons symbol state))))
-		 (when (memq symbol error-states)
-		   (throw 'state-wait (cons 'error   (cons symbol state))))
-		 ;; Update progress indicator and sleep.
-		 ;;(working-dynamic-status nil symbol)
-		 (progress-reporter-pulse 
-		  reporter (format "%s (%s)"  message symbol))
-		 (sleep-for 0.05))))))
+	  (catch 'state-wait
+	    (while t
+	      ;; Retrieve current state.
+	      (destructuring-bind (symbol . state)
+		  (rudel-current-state machine t)
+		;; Check against success and error states.
+		(when (memq symbol success-states)
+		  (throw 'state-wait (cons 'success (cons symbol state))))
+		(when (memq symbol error-states)
+		  (throw 'state-wait (cons 'error   (cons symbol state))))
+		;; Update progress indicator and sleep.
+		(progress-reporter-pulse 
+		 reporter (format "%s (%s)"  message symbol))
+		(sleep-for 0.05))))))
+    (progress-reporter-pulse reporter (concat message " "))
     (progress-reporter-done reporter)
 
     ;; If MACHINE ended up in an error state, signal
